--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -19,6 +19,7 @@ p
 	font-family: $main-font
 	padding: 0
 	line-height: 1.6
+	margin: 0
 a
 	text-decoration: none
 	color: $main-color
@@ -33,6 +34,7 @@ a
 	width: 100%
 	background-color: $white
 	min-height: 100%
+	margin-bottom: -59px
 .banner
 	width: 100%
 	.bg
@@ -120,17 +122,61 @@ a
 .heading
 	color: $main-color
 	margin-bottom: 40px
-	font-family: 'Open Sans', sans-serif
-	font-style: italic
+	font-family: 'Montserrat'
 
+.central
+	width: 1000px
+	max-width: 100%
+	margin: 0 auto
+	padding: 20px
+	padding-bottom: 50px
+	background-color: #e5e5e5
+	//box-shadow: 0 0 10px 1px #aaa
+	.heading
+		text-align: center
+		margin: 0
+		margin-top: 20px
+	hr
+		width: 400px
+		max-width: 90%
+		margin: 20px auto
+.subtext
+	text-align: center
+	width: 600px
+	max-width: 100%
+	padding: 0 20px
+	margin: 0 auto
+
+.subbanner
+	position: relative
+	z-index: 1
+	background-color: $main-color
+	color: white
+	text-align: center
+	padding: 20px 0
+	font-weight: 600
+	font-size: 2em
+	p
+		margin: 0
+.subheadingtext
+	width: 600px
+	margin: 0 auto
+	max-width: 100%
+.subheading
+	@extend .subheadingtext
+	margin-bottom: 10px
+	margin-top: 15px
+	font-size: 1.2em
 
 footer
-	margin-top: 90px
 	padding: 20px
 	background-color: #454641
-	font-family: 'Open Sans', sans-serif
+	font-family: 'Roboto', sans-serif
 	text-align: center
+	color: #fff
 	a
 		color: #E05530
 		&:hover
 			color: $main-color
+.push
+	height: 59px
