--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -37,12 +37,13 @@ a
 	margin-bottom: -59px
 .banner
 	width: 100%
+	height: 47vw
 	.bg
 		background-image: url(https://static.pexels.com/photos/6042/nature-grain-moving-cereal.jpg)
 		background-size: cover
 		background-repeat: no-repeat
 		background-position: center
-		height: 80%
+		height: 47vw
 		width: 100%
 		position: absolute
 		filter: blur(5px)
@@ -56,25 +57,50 @@ a
 			width: 100%
 			content: " "
 			background-color: rgba(0, 0, 0, .5)
-	height: 80%
-	img, p
+	> img, p
 		position: relative
 		z-index: 50
-		text-align: center
+		//text-align: center
 		color: $main-color
 		text-shadow: 1px 1px 10px #777
 	p
-		font-size: 200%
+		font-size: 120%
 		font-family: $main-font
-		margin-top: 30px
 		font-style: italic
-	img
-		padding-top: 30vh
+		position: relative
+		top: -30px
+		left: 60px
+		display: inline-block
+	> img
+		//padding-top: 30vh
 		font-size: 15vh
-		margin: 0 auto
+		//margin: 0 auto
 		display: block
 		max-width: 100%
-		width: 400px
+		width: 200px
+		max-width: 40%
+@media(max-width: 700px)
+	.banner
+		height: 60vw
+		.bg
+			height: 60vw
+
+.slider
+	width: 80%
+	max-width: 100%
+	height: auto
+	margin: 0 auto
+	position: absolute
+	left: 0
+	right: 0
+	top: 12vh
+	img
+		transition: display .4s
+		display: none
+		max-width: 100%
+		margin: 0 auto
+	.display
+		display: block
 .info
 	h1
 		text-align: center
