--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -95,12 +95,15 @@ a
 	right: 0
 	top: 12vh
 	img
-		transition: display .4s
-		display: none
+		position: absolute
+		transition: opacity 1.5s
+		//display: none
+		opacity: 0
 		max-width: 100%
 		margin: 0 auto
 	.display
-		display: block
+		//display: block
+		opacity: 1
 .info
 	h1
 		text-align: center
