--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,6 +99,8 @@ a {
     opacity: 0;
     max-width: 100%;
     margin: 0 auto; }
+  .slider #img0 {
+    transition: opacity 3s; }
   .slider .display {
     opacity: 1; }
 
