--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -101,9 +101,15 @@ a
 		opacity: 0
 		max-width: 100%
 		margin: 0 auto
+
+
+	#img0
+		transition: opacity 3s
 	.display
 		//display: block
 		opacity: 1
+
+
 .info
 	h1
 		text-align: center
