--- a/stylesheet.sass
+++ b/stylesheet.sass
@@ -103,8 +103,8 @@ a
 		margin: 0 auto
 
 
-	#img0
-		transition: opacity 3s
+	//#img0
+	//	transition: opacity 3s
 	.display
 		//display: block
 		opacity: 1
